# CommandToSwagerTranslator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CommandToSwagerTranslator.pro
lib/Debug/: openapi_client.lib  tcp_server.lib
src/: CMakeLists.txt  README.md  RestApiHelper.cpp  RestApiHelper.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  OAIAssembly.cpp  OAIAssembly.h  OAIAssemblyApi.cpp  OAIAssemblyApi.h  OAIAssemblyPart.cpp  OAIAssemblyPart.h  OAIAssemblyPartApi.cpp  OAIAssemblyPartApi.h  OAIAssemblyPartSearchCriteria.cpp  OAIAssemblyPartSearchCriteria.h  OAIAuthApi.cpp  OAIAuthApi.h  OAIBasic_error.cpp  OAIBasic_error.h  OAICoordinate.cpp  OAICoordinate.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIFilesApi.cpp  OAIFilesApi.h  OAIGuid.cpp  OAIGuid.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIInline_object.cpp  OAIInline_response_200.cpp  OAIInline_response_200.h  OAIInline_response_201.cpp  OAIInline_response_201.h  OAILimitingBox.cpp  OAILimitingBox.h  OAIObject.h  OAIRenderingParams.cpp  OAIRenderingParams.h  (+7 more)
src/openapi/: README.md
src/openapi/.openapi-generator/: FILES
src/openapi/client/: CMakeLists.txt  OAIEnum.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  client.pri
src/openapi/client/ru.ascin.kcs.api.qt5cpp/: OAIAssemblyApi.h  OAIAssemblyPartApi.cpp  OAIAssemblyPartApi.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIWorkspaceApi.h
src/openapi/client/ru.ascin.kcs.api.qt5cpp.model/: OAIAssembly.h  OAIAssemblyPart.cpp  OAIAssemblyPart.h  OAIAssemblyPartSearchCriteria.cpp  OAIAssemblyPartSearchCriteria.h  OAICoordinate.cpp  OAIErrorResponse.cpp  OAIErrorResponse.h  OAIGuid.cpp  OAIGuid.h  OAIInline_object.h  OAIInline_response_200.cpp  OAIInline_response_200.h  OAIInline_response_200_1.cpp  OAIInline_response_200_1.h  OAIInline_response_200_2.cpp  OAIInline_response_200_2.h  OAIInline_response_201.cpp  OAIInline_response_201.h  OAILimitingBox.cpp  OAILimitingBox.h
src/tcp_server/: CMakeLists.txt  decl.h  tcp_server.cpp  tcp_server.h
