set(TARGET_NAME azr_tcp_server)

set(LIB_TYPE STATIC)

find_package(Qt5 ${SKIF_PLUGINS_QT_VERSION} REQUIRED COMPONENTS Core Network)
set(CMAKE_AUTOMOC ON)

file(GLOB_RECURSE HEADER_FILES "*.h")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

set(CMAKE_AUTOMOC ON)
add_library(${TARGET_NAME} ${LIB_TYPE} ${SOURCE_FILES} ${HEADER_FILES})
#TODO to sppuli
STRING(TOUPPER "${TARGET_NAME}" TARGET_NAME_UPPER)
set(DEFINE_PREFIX ${PROJECT_DEFINE_PREFIX}_${TARGET_NAME_UPPER})
message(INFO "Define prefix: " ${DEFINE_PREFIX})
if(LIB_TYPE EQUAL SHARED)
	SET_PROPERTY(TARGET ${TARGET_NAME} APPEND PROPERTY COMPILE_DEFINITIONS ${DEFINE_PREFIX}_DYN_LINK)
endif()
SET_PROPERTY(TARGET ${TARGET_NAME} APPEND PROPERTY COMPILE_DEFINITIONS ${DEFINE_PREFIX}_SOURCE)

target_link_libraries(${TARGET_NAME}
        Qt5::Core
		Qt5::Network
        skif_logger
)

